# PointCloudViewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  pcv_app.cpp  pcv_app.h  pcv_appprivate.cpp  pcv_appprivate.h  pcv_mainwindowbase.h  pcv_plugin.h
src/application/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/core/: CMakeLists.txt  delegate.h  delegateT.h  pcv.h  pcv_animatedicon.cpp  pcv_animatedicon.h  pcv_configure.h  pcv_matrix.h  pcv_object.cpp  pcv_object.h  pcv_videodecode.cpp  pcv_videodecode.h
src/core/data/: pcv_dataitem.h  pcv_metadata.h  pcv_pointcloud.h
src/core/dataitem/: pcv_dataitem.cpp  pcv_dataitem.h  pcv_folderitem.cpp  pcv_folderitem.h  pcv_pointclouditem.cpp  pcv_pointclouditem.h
src/core/progress/: pcv_progressitem.h
src/gui/: CMakeLists.txt
src/gui/widgets/: pcv_collapsiblegroupbox.cpp  pcv_collapsiblegroupbox.h  pcv_combobox.cpp  pcv_combobox.h  pcv_combobox_p.h  pcv_lineedit.cpp  pcv_lineedit.h  pcv_tiplabel.cpp  pcv_tiplabel.h  pcv_toolbar.h
tests/: CMakeLists.txt  test_spdlog.cpp  test_spdlog1.h  test_spdlog2.cpp
